--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,9 +28,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-beanutils-1.9.2.jar=lib/commons-beanutils-1.9.2.jar
+file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-fileupload-1.3.2.jar=lib/commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
+file.reference.commons-logging-1.1.2.jar=lib/commons-logging-1.1.2.jar
 file.reference.gson-2.6.2.jar=lib/gson-2.6.2.jar
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
 file.reference.mysql-connector-java-5.1.36-bin.jar=lib/mysql-connector-java-5.1.36-bin.jar
+file.reference.shiro-core-1.3.2.jar=lib/shiro-core-1.3.2.jar
 file.reference.slf4j-api-1.7.2.jar=lib/slf4j-api-1.7.2.jar
 file.reference.slf4j-log4j12-1.7.2.jar=lib/slf4j-log4j12-1.7.2.jar
 includes=**
@@ -46,7 +54,16 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
     ${file.reference.slf4j-api-1.7.2.jar}:\
     ${file.reference.slf4j-log4j12-1.7.2.jar}:\
-    ${file.reference.gson-2.6.2.jar}
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.commons-beanutils-1.9.2.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}:\
+    ${file.reference.shiro-core-1.3.2.jar}:\
+    ${reference.AuthSession.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,6 +92,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.AuthSession=../AuthSession
+reference.AuthSession.jar=${project.AuthSession}/dist/AuthSession.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
