moves dto in commons project for using in android projects

--- a/src/java/log4j.properties
+++ b/src/java/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%F:%t:%L] - %m%n
 
 log4j.appender.debugLog=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.debugLog=org.apache.log4j.FileAppender
-log4j.appender.debugLog.File=logs/debug.log
+log4j.appender.debugLog.File=${catalina.base}/logs/debug.log
 log4j.appender.debugLog.Append=true
 #every mid night creates a file for debug
 log4j.appender.debugLog.DatePattern='.'yyyy-MM-dd
@@ -17,7 +17,7 @@ log4j.appender.debugLog.layout.ConversionPattern=%d [%F:%t:%L] - %m%n
 
 log4j.appender.errorLog=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.errorLog=org.apache.log4j.FileAppender
-log4j.appender.errorLog.File=logs/error.log
+log4j.appender.errorLog.File=${catalina.base}/logs/error.log
 log4j.appender.errorLog.Append=true
 #every mid night creates a file for debug
 log4j.appender.errorLog.DatePattern='.'yyyy-MM-dd
