--- a/src/java/facebook.properties
+++ b/src/java/facebook.properties
@@ -3,6 +3,8 @@
 # and open the template in the editor.
 AUTH_URL            = https://www.facebook.com/dialog/oauth
 CALLBACK_URL        = http://localhost:8080/FlatAuction/SocialAuthServlet
-APP_ID              = 648645175170513
-APP_SECRET          = 55b6fff3a717b0c16936b4353e9b2f73
+#APP_ID             = 648645175170513
+APP_ID              = 1564757346907943
+#APP_SECRET         = 55b6fff3a717b0c16936b4353e9b2f73
+APP_SECRET          = 6da66fad5dae0317191ea694c26d5317
 SCOPE               = email,user_hometown,publish_actions,user_likes,user_status,user_about_me,user_location,user_birthday,user_photos,user_posts,user_friends,user_relationship_details,user_games_activity,user_relationships
