added more property in worldpay

--- a/src/java/worldpay.properties
+++ b/src/java/worldpay.properties
@@ -11,8 +11,8 @@ CART_PREFIX = World-
 #CAD - Canadian Dollars
 CURRENCY_CODE = GBP
 CAPTURE_DELAY = 0
-MDF_ENCRYPTION = Y
-MDF_SECRET_KEY = test1234
+MD5_ENCRYPTION = Y
+MD5_SECRET_KEY = test1234
 
 
 
@@ -26,12 +26,12 @@ VISA_CARD_ENABLE = Y
 MASTER_CARD_ENABLE = Y
 MAESTRO_CARD_ENABLE = Y
 JCB_CARD_ENABLE = Y
-AMEX_CARD_ENABLE = Y
-ELV_CARD_ENABLE = Y
+AMEX_CARD_ENABLE = N
+ELV_CARD_ENABLE = N
 BILLING_ADDRESS = Y
-WITH_DELIVERY = N
-DELIVER_ADDRESS = N
-FIXED_CONTACT_DETAILS = N
+WITH_DELIVERY = Y
+DELIVER_ADDRESS = Y
+FIXED_CONTACT_DETAILS = Y
 HIDE_CONTACT_DETAILS = N
 WORLDPAY_SANDBOX_URL = https://secure-test.worldpay.com/wcc/purchase
 WORLDPAY_URL = https://secure.worldpay.com/wcc/purchase
