change cart prefix

--- a/src/java/worldpay.properties
+++ b/src/java/worldpay.properties
@@ -1,35 +1,28 @@
-INSTALLATION_ID = 1215771
-
-ENVIRONMENT = TEST
-
-#cartPrefix is what will be appended before your cartId parameter being passed to WorldPay. For example if you would like to generate a unique order code with your company name before you could do so by using the cartPrefix.
-CART_PREFIX = World-
-
+INSTALLATION_ID         = 1215771
+ENVIRONMENT             = TEST
+CART_PREFIX             = RoomAuction-
 #GBP - Great British Pounds
 #USD - US Dollars
 #EUR - Euros
 #CAD - Canadian Dollars
-CURRENCY_CODE = GBP
-CAPTURE_DELAY = 0
-MD5_ENCRYPTION = Y
-MD5_SECRET_KEY = test1234
-
-
-BUTTON_DISPLAY_TEXT = Make Payment
-
-VISA_CARD_ENABLE = Y
-MASTER_CARD_ENABLE = Y
-MAESTRO_CARD_ENABLE = Y
-JCB_CARD_ENABLE = Y
-AMEX_CARD_ENABLE = N
-ELV_CARD_ENABLE = N
-BILLING_ADDRESS = Y
-WITH_DELIVERY = Y
-DELIVER_ADDRESS = Y
-FIXED_CONTACT_DETAILS = Y
-HIDE_CONTACT_DETAILS = N
-WORLDPAY_SANDBOX_URL = https://secure-test.worldpay.com/wcc/purchase
-WORLDPAY_URL = https://secure.worldpay.com/wcc/purchase
-MARCHANT_CODE_1 = merchantCode1
-MARCHANT_CODE_2 = merchantCode2
-MARCHANT_CODE_3 = merchantCode3
+CURRENCY_CODE           = GBP
+CAPTURE_DELAY           = 0
+MD5_ENCRYPTION          = Y
+MD5_SECRET_KEY          = test1234
+BUTTON_DISPLAY_TEXT     = Make Payment
+VISA_CARD_ENABLE        = Y
+MASTER_CARD_ENABLE      = Y
+MAESTRO_CARD_ENABLE     = Y
+JCB_CARD_ENABLE         = Y
+AMEX_CARD_ENABLE        = N
+ELV_CARD_ENABLE         = N
+BILLING_ADDRESS         = Y
+WITH_DELIVERY           = Y
+DELIVER_ADDRESS         = Y
+FIXED_CONTACT_DETAILS   = Y
+HIDE_CONTACT_DETAILS    = N
+WORLDPAY_SANDBOX_URL    = https://secure-test.worldpay.com/wcc/purchase
+WORLDPAY_URL            = https://secure.worldpay.com/wcc/purchase
+MARCHANT_CODE_1         = merchantCode1
+MARCHANT_CODE_2         = merchantCode2
+MARCHANT_CODE_3         = merchantCode3
